--- a/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.Activities.Design/Designers/KnowledgebaseSyncDesigner.xaml
+++ b/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.Activities.Design/Designers/KnowledgebaseSyncDesigner.xaml
@@ -1,4 +1,4 @@
-<sap:ActivityDesigner x:Class="RPA.KnowledgebaseSync.Activities.Design.Designers.SyncKnowledgebaseDesigner"
+<sap:ActivityDesigner x:Class="RPA.KnowledgebaseSync.Activities.Design.Designers.KnowledgebaseSyncDesigner"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:activity="clr-namespace:RPA.KnowledgebaseSync.Activities.Properties;assembly=RPA.KnowledgebaseSync.Activities"
@@ -31,17 +31,17 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Label Content="{x:Static activity:Resources.SyncKnowledgebase_PortalDT_DisplayName}" Grid.Row="0"
-                   ToolTip="{x:Static activity:Resources.SyncKnowledgebase_PortalDT_Description}"/>
-            <sapv:ExpressionTextBox Grid.Row="1" ExpressionType="{Binding ModelItem.Properties[PortalDT].PropertyType.GenericTypeArguments[0]}" OwnerActivity="{Binding Path=ModelItem}" HintText="{x:Static activity:Resources.SyncKnowledgebase_PortalDT_Description}" UseLocationExpression="False">
+            <Label Content="{x:Static activity:Resources.KnowledgebaseSync_PortalDB_DisplayName}" Grid.Row="0"
+                   ToolTip="{x:Static activity:Resources.KnowledgebaseSync_PortalDB_Description}"/>
+            <sapv:ExpressionTextBox Grid.Row="1" ExpressionType="{Binding ModelItem.Properties[PortalDB].PropertyType.GenericTypeArguments[0]}" OwnerActivity="{Binding Path=ModelItem}" HintText="{x:Static activity:Resources.KnowledgebaseSync_PortalDB_Description}" UseLocationExpression="False">
                 <sapv:ExpressionTextBox.Expression>
-                    <Binding Path="ModelItem.PortalDT" Converter="{StaticResource ArgumentToExpressionConverter}" Mode="TwoWay" ConverterParameter="In" UpdateSourceTrigger="PropertyChanged" />
+                    <Binding Path="ModelItem.PortalDB" Converter="{StaticResource ArgumentToExpressionConverter}" Mode="TwoWay" ConverterParameter="In" UpdateSourceTrigger="PropertyChanged" />
                 </sapv:ExpressionTextBox.Expression>
             </sapv:ExpressionTextBox>
 
-            <Label Content="{x:Static activity:Resources.SyncKnowledgebase_Knowledgebase_DisplayName}" Grid.Row="2"
-                   ToolTip="{x:Static activity:Resources.SyncKnowledgebase_Knowledgebase_Description}"/>
-            <sapv:ExpressionTextBox Grid.Row="3" ExpressionType="{Binding ModelItem.Properties[Knowledgebase].PropertyType.GenericTypeArguments[0]}" OwnerActivity="{Binding Path=ModelItem}" HintText="{x:Static activity:Resources.SyncKnowledgebase_Knowledgebase_Description}" UseLocationExpression="False">
+            <Label Content="{x:Static activity:Resources.KnowledgebaseSync_Knowledgebase_DisplayName}" Grid.Row="2"
+                   ToolTip="{x:Static activity:Resources.KnowledgebaseSync_Knowledgebase_Description}"/>
+            <sapv:ExpressionTextBox Grid.Row="3" ExpressionType="{Binding ModelItem.Properties[Knowledgebase].PropertyType.GenericTypeArguments[0]}" OwnerActivity="{Binding Path=ModelItem}" HintText="{x:Static activity:Resources.KnowledgebaseSync_Knowledgebase_Description}" UseLocationExpression="False">
                 <sapv:ExpressionTextBox.Expression>
                     <Binding Path="ModelItem.Knowledgebase" Converter="{StaticResource ArgumentToExpressionConverter}" Mode="TwoWay" ConverterParameter="In" UpdateSourceTrigger="PropertyChanged" />
                 </sapv:ExpressionTextBox.Expression>
