Refactored for looping through knowledgebases

--- a/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.Activities.Design/Designers/KnowledgebaseSyncDesigner.xaml
+++ b/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.Activities.Design/Designers/KnowledgebaseSyncDesigner.xaml
@@ -29,13 +29,15 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Label Content="{x:Static activity:Resources.KnowledgebaseSync_PortalDB_DisplayName}" Grid.Row="0"
-                   ToolTip="{x:Static activity:Resources.KnowledgebaseSync_PortalDB_Description}"/>
-            <sapv:ExpressionTextBox Grid.Row="1" ExpressionType="{Binding ModelItem.Properties[PortalDB].PropertyType.GenericTypeArguments[0]}" OwnerActivity="{Binding Path=ModelItem}" HintText="{x:Static activity:Resources.KnowledgebaseSync_PortalDB_Description}" UseLocationExpression="False">
+            <Label Content="{x:Static activity:Resources.KnowledgebaseSync_PortalDT_DisplayName}" Grid.Row="0"
+                   ToolTip="{x:Static activity:Resources.KnowledgebaseSync_PortalDT_Description}"/>
+            <sapv:ExpressionTextBox Grid.Row="1" ExpressionType="{Binding ModelItem.Properties[PortalDT].PropertyType.GenericTypeArguments[0]}" OwnerActivity="{Binding Path=ModelItem}" HintText="{x:Static activity:Resources.KnowledgebaseSync_PortalDT_Description}" UseLocationExpression="False">
                 <sapv:ExpressionTextBox.Expression>
-                    <Binding Path="ModelItem.PortalDB" Converter="{StaticResource ArgumentToExpressionConverter}" Mode="TwoWay" ConverterParameter="In" UpdateSourceTrigger="PropertyChanged" />
+                    <Binding Path="ModelItem.PortalDT" Converter="{StaticResource ArgumentToExpressionConverter}" Mode="TwoWay" ConverterParameter="In" UpdateSourceTrigger="PropertyChanged" />
                 </sapv:ExpressionTextBox.Expression>
             </sapv:ExpressionTextBox>
 
@@ -44,6 +46,14 @@
             <sapv:ExpressionTextBox Grid.Row="3" ExpressionType="{Binding ModelItem.Properties[Knowledgebase].PropertyType.GenericTypeArguments[0]}" OwnerActivity="{Binding Path=ModelItem}" HintText="{x:Static activity:Resources.KnowledgebaseSync_Knowledgebase_Description}" UseLocationExpression="False">
                 <sapv:ExpressionTextBox.Expression>
                     <Binding Path="ModelItem.Knowledgebase" Converter="{StaticResource ArgumentToExpressionConverter}" Mode="TwoWay" ConverterParameter="In" UpdateSourceTrigger="PropertyChanged" />
+                </sapv:ExpressionTextBox.Expression>
+            </sapv:ExpressionTextBox>
+
+            <Label Content="{x:Static activity:Resources.KnowledgebaseSync_KnowledgebaseName_DisplayName}" Grid.Row="4"
+                   ToolTip="{x:Static activity:Resources.KnowledgebaseSync_KnowledgebaseName_Description}"/>
+            <sapv:ExpressionTextBox Grid.Row="5" ExpressionType="{Binding ModelItem.Properties[KnowledgebaseName].PropertyType.GenericTypeArguments[0]}" OwnerActivity="{Binding Path=ModelItem}" HintText="{x:Static activity:Resources.KnowledgebaseSync_KnowledgebaseName_Description}" UseLocationExpression="False">
+                <sapv:ExpressionTextBox.Expression>
+                    <Binding Path="ModelItem.KnowledgebaseName" Converter="{StaticResource ArgumentToExpressionConverter}" Mode="TwoWay" ConverterParameter="In" UpdateSourceTrigger="PropertyChanged" />
                 </sapv:ExpressionTextBox.Expression>
             </sapv:ExpressionTextBox>
         </Grid>
